--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 }
          #Introduction {
             position: absolute;
+            margin: 5px;
+            padding: 5px;
             right: 10vw;
             left:6vw;
             top: 15vh;
